# RibbonRendering

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build_and_run.sh  shell.nix
src/: README.md  cylinder_fragment.glsl  cylinder_geometry.glsl  cylinder_vertex.glsl  cylinder_wireframe_geometry.glsl  fragment.glsl  geometry.glsl  gl.cpp  gl.h  impostor_fragment.glsl  impostor_geometry.glsl  input.h  main.cpp  mesh_fragment.glsl  mesh_geometry.glsl  mesh_vertex.glsl  passthrough_vertex.glsl  sphere_fragment.glsl  sphere_geometry.glsl  sphere_vertex.glsl  sphere_wireframe_geometry.glsl  spline.cpp  spline.h  vertex.glsl  vertex_passthrough.glsl  window.cpp  window.h  wireframe_fragment.glsl  wireframe_geometry.glsl
src/shaders/: cylinder_fragment.glsl  mesh_fragment.glsl  mesh_vertex.glsl  sphere_fragment.glsl  sphere_vertex.glsl  wireframe_fragment.glsl
